// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test on GifExpertApp should render the component 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`test on GifExpertApp should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="mood"
      key="mood"
    />
    <GifGrid
      category="happy"
      key="happy"
    />
  </ol>
</Fragment>
`;
